Iniciando base da api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:hsqldb:hsql://localhost/rapidscrumdb
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:hsqldb:hsql://localhost/rapidscrumdb;ifexists=true
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
