--- a/rapidscrumdb.properties
+++ b/rapidscrumdb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.5.0
-#Mon Nov 18 16:00:28 BRT 2019
+#Mon Nov 18 15:57:41 BRT 2019
 tx_timestamp=0
-modified=yes
+modified=no
 version=2.5.0
