--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,11 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibenate.dialect=org.hibernate.dialect.HSQLDialect
 spring.datasource.url=jdbc:hsqldb:hsql://localhost/rapidscrumdb;ifexists=true
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
-spring.jpa.hibenate.dialect=org.hibernate.dialect.HSQLDialect
+
+spring.security.oauth2.client.client-id=usuario
+spring.security.oauth2.client.client-secret=senha
