--- a/src/main/resources/application-hiroku.properties
+++ b/src/main/resources/application-hiroku.properties
@@ -10,3 +10,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.security.oauth2.client.client-id=usuario
 spring.security.oauth2.client.client-secret=senha
+
+jwt-token-validade=14400
+jwt-token-secret=hashInMapDayOut
