--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
 
-spring.security.oauth2.client.client-id=usuario
-spring.security.oauth2.client.client-secret=senha
+jwt-token-validade=14400
+jwt-token-secret=hashInMapDayOut
+
