Criando URL de registro

--- a/db/rapidscrumdb.properties
+++ b/db/rapidscrumdb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.5.0
-#Fri Feb 14 11:00:08 BRT 2020
+#Mon Feb 17 09:02:21 BRT 2020
 tx_timestamp=0
-modified=yes
+modified=no
 version=2.5.0
