--- a/db/rapidscrumdb.properties
+++ b/db/rapidscrumdb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.5.0
-#Mon Feb 17 09:02:21 BRT 2020
+#Thu Feb 20 14:45:38 BRT 2020
 tx_timestamp=0
-modified=no
+modified=yes
 version=2.5.0
