--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,12 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibenate.dialect=org.hibernate.dialect.HSQLDialect
-spring.datasource.url=jdbc:hsqldb:hsql://localhost/rapidscrumdb;ifexists=true
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
-
+spring.jpa.hibenate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/rapidscrumdb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
 jwt-token-validade=14400
 jwt-token-secret=hashInMapDayOut
-
